--- a/universal/package.json
+++ b/universal/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.8.3",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "csurf": "^1.9.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
